--- a/package.json
+++ b/package.json
@@ -9,21 +9,34 @@
     "build": "webpack --mode production",
     "type-check": "tsc --noEmit",
     "test": "echo \"Error: no test specified\" && exit 1",
+    "json-server": "json-server --watch db.json --port 3001",
     "lint": "eslint 'src/**/*.{js,jsx,ts,tsx}'",
-    "prebuild": "npm run lint && npm run type-check"
+    "prebuild": "npm run lint && npm run type-check",
+    "docker:up": "docker compose up --build",
+    "docker:down": "docker compose down"
   },
   "license": "ISC",
   "dependencies": {
+    "json-server": "^1.0.0-beta.3",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-redux": "^9.2.0",
     "redux": "^5.0.1"
   },
   "devDependencies": {
+    "dotenv": "^16.5.0",
+    "@babel/plugin-transform-class-properties": "^7.18.6",
+    "@babel/plugin-transform-nullish-coalescing-operator": "^7.18.9",
+    "@babel/plugin-transform-numeric-separator": "^7.18.9",
+    "@babel/plugin-transform-optional-chaining": "^7.21.0",
+    "@babel/plugin-transform-private-methods": "^7.21.11",
+    "@babel/plugin-transform-private-property-in-object": "^7.21.11",
     "@types/react": "^19.1.6",
     "@types/react-dom": "^19.1.6",
     "@types/react-redux": "^7.1.34",
     "@types/redux": "^3.6.31",
+    "@typescript-eslint/eslint-plugin": "^5.62.0",
+    "@typescript-eslint/parser": "^5.62.0",
     "css-loader": "^7.1.2",
     "eslint": "^8.57.0",
     "eslint-config-react-app": "^7.0.1",
@@ -34,17 +47,9 @@
     "html-webpack-plugin": "^5.6.3",
     "style-loader": "^4.0.0",
     "ts-loader": "^9.5.2",
-    "typescript": "^5.4.0",
+    "typescript": "^5.8.3",
     "webpack": "^5.99.9",
     "webpack-cli": "^6.0.1",
-    "webpack-dev-server": "^5.2.2",
-    "@typescript-eslint/eslint-plugin": "^5.62.0",
-    "@typescript-eslint/parser": "^5.62.0",
-    "@babel/plugin-transform-nullish-coalescing-operator": "^7.18.9",
-    "@babel/plugin-transform-numeric-separator": "^7.18.9",
-    "@babel/plugin-transform-class-properties": "^7.18.6",
-    "@babel/plugin-transform-private-methods": "^7.21.11",
-    "@babel/plugin-transform-optional-chaining": "^7.21.0",
-    "@babel/plugin-transform-private-property-in-object": "^7.21.11"
+    "webpack-dev-server": "^5.2.2"
   }
 }
