--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "webpack serve --mode development --open ",
     "build": "webpack --mode production",
     "type-check": "tsc --noEmit",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
+    "test:watch": "jest --watch",
     "json-server": "json-server --watch db.json --port 3001",
     "lint": "eslint 'src/**/*.{js,jsx,ts,tsx}'",
     "prebuild": "npm run lint && npm run type-check",
@@ -18,6 +19,7 @@
   },
   "license": "ISC",
   "dependencies": {
+    "jest-environment-jsdom": "^30.0.0-beta.3",
     "json-server": "^1.0.0-beta.3",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
@@ -25,13 +27,15 @@
     "redux": "^5.0.1"
   },
   "devDependencies": {
-    "dotenv": "^16.5.0",
     "@babel/plugin-transform-class-properties": "^7.18.6",
     "@babel/plugin-transform-nullish-coalescing-operator": "^7.18.9",
     "@babel/plugin-transform-numeric-separator": "^7.18.9",
     "@babel/plugin-transform-optional-chaining": "^7.21.0",
     "@babel/plugin-transform-private-methods": "^7.21.11",
     "@babel/plugin-transform-private-property-in-object": "^7.21.11",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.3.0",
+    "@types/jest": "^29.5.14",
     "@types/react": "^19.1.6",
     "@types/react-dom": "^19.1.6",
     "@types/react-redux": "^7.1.34",
@@ -39,6 +43,7 @@
     "@typescript-eslint/eslint-plugin": "^5.62.0",
     "@typescript-eslint/parser": "^5.62.0",
     "css-loader": "^7.1.2",
+    "dotenv": "^16.5.0",
     "eslint": "^8.57.0",
     "eslint-config-react-app": "^7.0.1",
     "eslint-plugin-import": "^2.31.0",
@@ -46,7 +51,9 @@
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^5.2.0",
     "html-webpack-plugin": "^5.6.3",
+    "jest": "^29.7.0",
     "style-loader": "^4.0.0",
+    "ts-jest": "^29.3.4",
     "ts-loader": "^9.5.2",
     "typescript": "^5.8.3",
     "webpack": "^5.99.9",
