--- a/package.json
+++ b/package.json
@@ -19,12 +19,14 @@
   },
   "license": "ISC",
   "dependencies": {
+    "@redux-devtools/extension": "^3.3.0",
     "jest-environment-jsdom": "^30.0.0-beta.3",
     "json-server": "^1.0.0-beta.3",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-redux": "^9.2.0",
-    "redux": "^5.0.1"
+    "redux": "^5.0.1",
+    "redux-thunk": "^3.1.0"
   },
   "devDependencies": {
     "@babel/plugin-transform-class-properties": "^7.18.6",
