--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "license": "ISC",
   "dependencies": {
     "@redux-devtools/extension": "^3.3.0",
+    "axios": "^1.9.0",
     "jest-environment-jsdom": "^30.0.0-beta.3",
     "json-server": "^1.0.0-beta.3",
     "react": "^19.1.0",
