--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -30,7 +30,7 @@
   },
   "rules": {
     "react/react-in-jsx-scope": "off",
-    "no-unused-vars": "warn",
+    "no-unused-vars": "off",
     "@typescript-eslint/no-unused-vars": ["warn"],
     "import/order": ["warn", { "alphabetize": { "order": "asc" } }]
   }
