--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "eslint-plugin-react-hooks": "^5.2.0",
     "html-webpack-plugin": "^5.6.3",
     "jest": "^29.7.0",
+    "jest-fetch-mock": "^3.0.3",
     "style-loader": "^4.0.0",
     "ts-jest": "^29.3.4",
     "ts-loader": "^9.5.2",
