--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "type-check": "tsc --noEmit",
     "test": "jest",
     "test:watch": "jest --watch",
-    "json-server": "json-server --watch db.json --port 3001",
+    "json-server": "json-server --watch data/db.json --port 3001",
     "lint": "eslint 'src/**/*.{js,jsx,ts,tsx}'",
     "prebuild": "npm run lint && npm run type-check",
     "docker:up": "docker compose up",
